--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -115,8 +115,8 @@
   </div>
 </div>
 <div class="col-lg-12" *ngIf="!current && newVersion">
-<div *ngFor="let i of history" class="col-lg-6 new-table-invoice row" >
-    <div class="col-lg-1 status {{i.status==0?'open':'close'}}">&nbsp;</div>
+<div *ngFor="let i of history" class="col-lg-6 new-table-invoice {{i.status==0?'invoice-open':'invoice-close'}} row" >
+    <div class="col-lg-1 status">&nbsp;</div>
     <div class="col-lg-11 row">
       <div class="col-lg-7">
         <div class="col-lg-12 title">{{i.title}}</div>
