--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -180,6 +180,7 @@
   </div>
   </div>
 </div>
+</div>
 <ng-template #content let-c="close" let-d="dismiss" class="col-lg-12">
   <div class="modal-header col-lg-12">
     <h4 class="modal-title" id="modal-basic-title">Invoice preview</h4>
