--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -14,9 +14,13 @@
     color: rgb(73, 73, 73);
 }
 .chart {
-    /*border: solid 1px #dadada;*/
     padding-top: 15px;
     padding-bottom: 15px;
-    /*border-radius: 3px;*/
     background-color: #f5f5f5;
+}
+.summary-info {
+    background-color: #f5f5f5;
+    border-radius: 5px 5px 0px 0px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
