--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,14 @@
 <div class="col-lg-12 row">
+  
+<div class="summary-info col-lg-12">
+    <div class="row">
+      <div class="col-lg-3"><label style="font-weight: 600">Current Profile</label></div><div class="col-lg-9">My profile</div>
+      <div class="col-lg-3"><label style="font-weight: 600">Number of invoice</label></div><div class="col-lg-9">25</div>
+      <div class="col-lg-3"><label style="font-weight: 600">Total revenu invoiced</label></div><div class="col-lg-9">$10.000</div>
+      <div class="col-lg-3"><label style="font-weight: 600">Total revenu waiting for invoice</label></div><div class="col-lg-9">$100.000</div>
+      <div class="col-lg-3"><label style="font-weight: 600">Average rate</label></div><div class="col-lg-9">$1500</div>
+    </div>
+  </div>
 <div *ngIf="chartRatePerMonth" class="chart col-lg-6">
   <div class="col-lg-12">
     <label>Year <input type="text" [(ngModel)]="year" maxlength="4"></label>
@@ -13,13 +23,6 @@
     <fa-icon style="visibility:hidden"  class="btn btn-outline-dark sync-btn" (click)="reloadChart()" [icon]="faSync"></fa-icon>
     <canvas id="totalPerCustomer">{{ chartTotalPerCustomer }}</canvas>
   </div>
-</div>
-<div class="offset-lg-1 col-lg-5 row">
-  <div class="col-lg-6">Current Profile</div><div class="col-lg-6">My profile</div>
-  <div class="col-lg-6">Number of invoice</div><div class="col-lg-6">25</div>
-  <div class="col-lg-6">Total revenu invoiced</div><div class="col-lg-6">$10.000</div>
-  <div class="col-lg-6">Total revenu waiting for invoice</div><div class="col-lg-6">$100.000</div>
-  <div class="col-lg-6">Average rate</div><div class="col-lg-6">$1500</div>
 </div>
 </div>
   
