--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -1,3 +1,4 @@
+
 .details-logo > img{
     margin-top: 15px;
     background-color: #fff;
@@ -9,8 +10,10 @@
     font-weight: 600;
 }
 .details-container {
-
-    background-color: #e0e0e0;
+    background-color: #f6ffef;
+    border-radius: 5px 5px 0px 0px;
+    border: solid 1px #b7b7b7;
+    padding-right: 0px;
 
 }
 .details-row {
