--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -76,10 +76,11 @@
         <!-- NEW VERSION -->
 
         <div class="container-new-version col-lg-12 row">
-          <div class="col-lg-6" *ngIf="!current && newVersion">
+          <div class="col-lg-8" *ngIf="!current && newVersion">
           <div *ngFor="let i of history" class="col-lg-12 col-sm-12 new-table-invoice {{i.status==0?'invoice-open':'invoice-close'}} row" (click)="openDetails(i)" style="cursor: pointer;" >
               <div class="col-lg-1 status">&nbsp;</div>
-              <div class="col-lg-11 row">
+              <div class="col-lg-2" *ngIf="details.invoicer.logo"><img [src]="uploadService.getResourcePath(details.invoicer.logo)" height="75">&nbsp;</div>
+              <div class="col-lg-9 row">
                 <div class="col-lg-7">
                   <div class="col-lg-12 title">{{i.title}}</div>
                   <div class="col-lg-12 number">{{i.invoiceNumber}}</div>
@@ -143,11 +144,7 @@
             </div>
           </div>
           </div>
-          <div class="col-lg-6 details-container" *ngIf="details">
-            <div class="col-lg-12 row">
-              <div class="col-lg-6 details-logo" *ngIf="details.invoicer.logo"><img [src]="uploadService.getResourcePath(details.invoicer.logo)" height="75"></div>
-              <div class="col-lg-6 details-logo" *ngIf="details.invoiced.logo"><img [src]="uploadService.getResourcePath(details.invoiced.logo)" height="75"></div>
-            </div>
+          <div class="col-lg-4 details-container" *ngIf="details">
             <div class="col-lg-12" *ngIf="details.items.length == 0"><h5>No items</h5></div>
             <div class="col-lg-12 row details-row" *ngFor="let d of details.items">
               
