--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -14,12 +14,14 @@
     border-radius: 5px 5px 0px 0px;
     border: solid 1px #b7b7b7;
     padding-right: 0px;
+    padding-left: 0px;
 
 }
 .details-row {
     border-bottom: dashed 1px #c5c5c5;
     padding-top: 5px;
     padding-bottom: 5px;
+    margin-left: 0;
 }
 
 .container-new-version {
