--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -79,7 +79,7 @@
           <div class="col-lg-8" *ngIf="!current && newVersion">
           <div *ngFor="let i of history" class="col-lg-12 col-sm-12 new-table-invoice {{i.status==0?'invoice-open':'invoice-close'}} row" (click)="openDetails(i)" style="cursor: pointer;" >
               <div class="col-lg-1 status">&nbsp;</div>
-              <div class="col-lg-2" *ngIf="details.invoicer.logo"><img [src]="uploadService.getResourcePath(details.invoicer.logo)" height="75">&nbsp;</div>
+              <div class="col-lg-2" *ngIf="i.invoicer.logo" style="overflow: hidden"><img [src]="uploadService.getResourcePath(i.invoicer.logo)" height="75">&nbsp;</div>
               <div class="col-lg-9 row">
                 <div class="col-lg-7">
                   <div class="col-lg-12 title">{{i.title}}</div>
