--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
     <div class="col-sm-10 routerContent">
         <div class="col-lg-12">
             <h5>
-                <fa-icon [icon]="currentMenu.icon" class="header-icon" [ngStyle]="{'background-color': currentMenu.color}"></fa-icon> 
+                <fa-icon [icon]="currentMenu.icon" class="header-icon" [ngStyle]="{'border-color': currentMenu.color, 'color': currentMenu.color}"></fa-icon> 
                 {{currentMenu.label}}
             </h5>
         </div>
