--- a/src/styles.css
+++ b/src/styles.css
@@ -304,7 +304,7 @@ border-radius: 3px 3px 0px 0px;
 }
 .header-icon {
     color: #fff;
-    background-color: #ff8484;
+    /*background-color: #ff8484;*/
     border-color: #6c757d;
     border: 1px solid transparent;
     padding: 0.375rem 0.75rem;
