--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+  <div [ngClass]="toggleNavbarShow()" id="navbarTogglerDemo01">
     <a class="navbar-brand" href="#">Invoicer</a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
     </ul>
@@ -50,16 +49,6 @@
       <p>Forbidden. Please log in</p>
       <p>User: user, password: user</p>
       <p>User: admin, password: admin</p>
-    </div>
-    <div class="col-lg-12">
-      <div class="form-group">
-        <input [(ngModel)]="username" name="username" class="form-control mr-sm-2" type="text" placeholder="username"
-               aria-label="Username">
-        <input [(ngModel)]="password" name="password" class="form-control mr-sm-2" type="password"
-               placeholder="password"
-               aria-label="Password">
-        <button class="btn btn-info btn-block text-white my-2 my-sm-0" type="button" (click)="login()">Sign in</button>
-      </div>
     </div>
   </div>
 </div>
