--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,18 @@
   <div [ngClass]="toggleNavbarShow()" id="navbarTogglerDemo01">
     <a class="navbar-brand" href="#">Invoicer</a>
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item" *ngFor="let m of menu" (click)="click(m);m.selected=true;">
+        <a routerLink="{{m.route}}" class="nav-link text-white">
+          <fa-icon [icon]="m.icon" [ngStyle]="{color: m.color}" width="50px"></fa-icon>
+          <span [ngStyle]="{'color': m.selected ? m.color:''}">&nbsp;{{m.label}}</span>
+        </a>
+      </li><!--
+      <hr class="recent-hr"/>
+      <ul class="recent">
+        recent
+        <li><fa-icon [icon]="faFileInvoice"></fa-icon> TODO</li>
+        <li><fa-icon [icon]="faFileInvoice"></fa-icon> TODO</li>
+      </ul>-->
     </ul>
     <div *ngIf="!isLoggedIn()" class="form-inline my-2 my-lg-0">
       <input [(ngModel)]="username" name="username" class="form-control mr-sm-2" type="text" placeholder="username"
@@ -19,21 +31,21 @@
     </div>
   </div>
 </nav>
-<div class="row col-sm-12" *ngIf="isLoggedIn()">
-    <div class="col-sm-2 sidebar">
-       
-        <div class="col-sm-12 row" *ngFor="let m of menu" routerLink="{{m.route}}" routerLinkActive="selected" [ngStyle]="{'color': m.selected ? m.color:''}" (click)="click(m);m.selected=true">
-            <div class="col-sm-2"><fa-icon [icon]="m.icon" [ngStyle]="{color: m.color}" width="50px"></fa-icon></div>
-            <div class="col-lg-10">{{m.label}}</div>
-        </div>
-        <hr class="recent-hr"/>
-        <ul class="recent">
-            recent
-            <li><fa-icon [icon]="faFileInvoice"></fa-icon> TODO</li>
-            <li><fa-icon [icon]="faFileInvoice"></fa-icon> TODO</li>
-        </ul>
-    </div>
-    <div class="col-sm-10 routerContent">
+<div class="row" *ngIf="isLoggedIn()">
+  <!--   <div class="col-sm-2 sidebar">
+
+         <div class="col-sm-12 row" *ngFor="let m of menu" routerLink="{{m.route}}" routerLinkActive="selected" [ngStyle]="{'color': m.selected ? m.color:''}" (click)="click(m);m.selected=true">
+             <div class="col-sm-2"><fa-icon [icon]="m.icon" [ngStyle]="{color: m.color}" width="50px"></fa-icon></div>
+             <div class="col-lg-10">{{m.label}}</div>
+         </div>
+         <hr class="recent-hr"/>
+         <ul class="recent">
+             recent
+             <li><fa-icon [icon]="faFileInvoice"></fa-icon> TODO</li>
+             <li><fa-icon [icon]="faFileInvoice"></fa-icon> TODO</li>
+         </ul>
+     </div>-->
+  <div class="container-fluid routerContent">
         <div class="col-lg-12">
             <fa-icon [icon]="currentMenu.icon" class="header-icon" [ngStyle]="{'border-color': currentMenu.color, 'color': currentMenu.color}"></fa-icon>  
             <h5>
