--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -17,6 +17,7 @@
     padding-top: 15px;
     padding-bottom: 15px;
     background-color: #f5f5f5;
+  display: inline-block;
 }
 .summary-info {
     background-color: #f5f5f5;
