--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
-<div class="col-lg-12 row">
-<div class="summary-info col-lg-12">
-    <div class="row">
+<div class="container-fluid">
+  <div class="summary-info ">
+    <div class="row ml-1">
       <div class="col-lg-3"><label style="font-weight: 600">Current Profile</label></div><div class="col-lg-9">My profile</div>
       <div class="col-lg-3"><label style="font-weight: 600">Number of invoice</label></div><div class="col-lg-9">25</div>
       <div class="col-lg-3"><label style="font-weight: 600">Total revenu invoiced</label></div><div class="col-lg-9">$10.000</div>
