--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
       <button class="btn btn-outline-info text-white my-2 my-sm-0" type="button" (click)="login()">Sign in</button>
     </div>
     <div *ngIf="isLoggedIn()" class="form-inline my-2 my-lg-0">
-      <span class="text-white">Welcome {{getUser().username}}</span>
+      <span class="text-white">Welcome {{getUser().username}}</span>&nbsp;
       <button class="btn btn-outline-danger text-white my-2 my-sm-0" type="button" (click)="logout()">Logout</button>
     </div>
   </div>
