--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
     </div>
   </div>
 </nav>
-<div class="row" *ngIf="isLoggedIn()">
+<div class="" *ngIf="isLoggedIn()">
   <!--   <div class="col-sm-2 sidebar">
 
          <div class="col-sm-12 row" *ngFor="let m of menu" routerLink="{{m.route}}" routerLinkActive="selected" [ngStyle]="{'color': m.selected ? m.color:''}" (click)="click(m);m.selected=true">
