--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -117,7 +117,7 @@
             <div class="col-lg-1">
                 <div class="number">
                 <div ngbDropdown class="d-inline-block" style="cursor: pointer;">
-                  <span ngbDropdownToggle></span>
+                  <span class="btn" ngbDropdownToggle></span>
                   <div ngbDropdownMenu aria-labelledby="dropdown" class="dropdown-menu">
                     <div (click)="openInvoice(i)">
                       <fa-icon [icon]="faFolderOpen"></fa-icon>
@@ -205,9 +205,26 @@
             <div class="col-lg-3"><fa-icon [icon]="faPaperclip"></fa-icon></div>
             <div class="col-lg-9">Attachments</div>
           </div>
+          
+          <div class="col-lg-1 header-icon {{listOpened == 'products'?'open':''}}" (click)="openList('products')">
+            <div class="col-lg-3"><fa-icon [icon]="faListAlt"></fa-icon></div>
+            <div class="col-lg-9">Products</div>
+          </div>
         </div>
         <app-attachment-list [invoice]="current" *ngIf="current && listOpened == 'attachments'"></app-attachment-list>
         <app-item-list [invoice]="current" *ngIf="current && listOpened == 'items'"></app-item-list>
+
+        <div class="col-lg-12 row">
+          <div class="col-lg-6">
+            <div  *ngFor="let p of current.products">
+              <span>{{p.name}}</span>
+              <span>{{p.unitPrice}}</span>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <app-product *ngIf="current && listOpened == 'products'" (productSelected)="productSelected($event)" [selectOnly]="true"></app-product>
+          </div>
+        </div>
       </div>
     </div>
   </div>
