--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,4 +1,4 @@
-<div class="form-group">  
+<div class="form-group" *ngIf="!selectOnly">  
   <button class="btn btn-outline-secondary"><fa-icon [icon]="faPlus"></fa-icon> Add</button>
   <div class="container-table-items col-lg-12" *ngIf="products.length > 0">
     <div class="row new-items table-header">
@@ -13,7 +13,7 @@
       <div class="col-lg-1">VAT</div>
     </div>
 
-    <div class="row add-items table-items" *ngFor="let p of products">
+    <div class="row add-items table-items" *ngFor="let p of products" (click)="select(p)">
         <div class="col-lg-1">{{p.id}}</div>
         <div class="col-lg-2">{{p.name}}</div>
         <div class="col-lg-3">{{p.description}}</div>
@@ -34,6 +34,24 @@
             </div>
           </div>       
         </div>
+    </div>
+  </div>
+</div>
+
+<div class="" *ngIf="selectOnly">
+  Type: <select [(ngModel)]="typeFilter">
+    <option value="-1">All</option>
+    <option value="0">Service</option>
+    <option value="1">Article</option>
+  </select>
+  Name: <input [(ngModel)]="nameFilter">
+
+  <div *ngFor="let p of filteredProduct">
+    <div class="col-lg-12">
+      <label>{{p.name}}</label>
+      <label>Type {{p.type}}</label>
+      <label>Unit {{p.unitOfMeasure}}</label>
+      <label>Unit Price {{p.unitPrice}}</label>
     </div>
   </div>
 </div>
