--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -214,7 +214,7 @@
         <app-attachment-list [invoice]="current" *ngIf="current && listOpened == 'attachments'"></app-attachment-list>
         <app-item-list [invoice]="current" *ngIf="current && listOpened == 'items'"></app-item-list>
 
-        <div class="col-lg-12 row">
+        <div class="col-lg-12 row" *ngIf="current && listOpened == 'products'">
           <div class="col-lg-6">
             <div  *ngFor="let p of current.products">
               <span>{{p.name}}</span>
@@ -222,7 +222,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <app-product *ngIf="current && listOpened == 'products'" (productSelected)="productSelected($event)" [selectOnly]="true"></app-product>
+            <app-product (productSelected)="productSelected($event)" [selectOnly]="true"></app-product>
           </div>
         </div>
       </div>
