--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -46,12 +46,18 @@
   </select>
   Name: <input [(ngModel)]="nameFilter">
 
-  <div *ngFor="let p of filteredProduct">
-    <div class="col-lg-12">
-      <label>{{p.name}}</label>
-      <label>Type {{p.type}}</label>
-      <label>Unit {{p.unitOfMeasure}}</label>
-      <label>Unit Price {{p.unitPrice}}</label>
+  <div class="col-lg-12 table-product-selection">
+    <div class="col-lg-12 row header">
+      <div class="col-lg-3">Type</div>
+      <div class="col-lg-3">Name</div>
+      <div class="col-lg-3">Unit of Measure</div>
+      <div class="col-lg-3">Unit price</div>
+    </div>
+    <div class="col-lg-12 row content" *ngFor="let p of filteredProduct" (click)="select(p)">
+      <div class="col-lg-3">{{p.type}}</div>
+      <div class="col-lg-3">{{p.name}}</div>
+      <div class="col-lg-3">{{p.unitOfMeasure}}</div>
+      <div class="col-lg-3">{{p.unitPrice}}</div>
     </div>
   </div>
 </div>
