--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -218,9 +218,19 @@
           <div class="col-lg-6">
             <label>Products selected</label>
             <span class="btn btn-outline-dark" (click)="current.products = []">Clear selection</span>
-            <div  *ngFor="let p of current.products">
-              <span>{{p.name}}</span>
-              <span>{{p.unitPrice}}</span>
+            <div class="col-lg-12 row">
+                <div class="col-lg-3">Name</div>
+                <div class="col-lg-3">Unit price</div>
+                <div class="col-lg-3">Quantity</div>
+                <div class="col-lg-3">Unit of measure</div>
+            </div>
+            <div  class="selected-product" *ngFor="let p of current.products;let i = index">
+              <input class="col-lg-3" [(ngModel)]="p.name">
+              <input class="col-lg-3" [(ngModel)]="p.unitPrice">
+              <input class="col-lg-3" [(ngModel)]="p.quantity">
+              <input class="col-lg-3" [(ngModel)]="p.unitOfMeasure">
+              
+              <!--<button (click)="removeProduct(i)">-</button>-->
             </div>
           </div>
           <div class="col-lg-6">
