--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -168,7 +168,10 @@
 i{
   vertical-align: middle;
 }
-.selected-product > input {
+.selected-product-content > div, .selected-product-header > div{
+    padding: 0;
+}
+.selected-product-content > div > input {
     border: none;
     border-bottom: solid 1px #EDEDED;
     border-radius: 0;
