--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -39,6 +39,7 @@
 </div>
 
 <div class="" *ngIf="selectOnly">
+  <h5>Search for a product</h5>
   Type: <select [(ngModel)]="typeFilter">
     <option value="-1">All</option>
     <option value="0">Service</option>
