--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -215,25 +215,27 @@
         <app-item-list [invoice]="current" *ngIf="current && listOpened == 'items'"></app-item-list>
 
         <div class="col-lg-12 row" *ngIf="current && listOpened == 'products'">
-          <div class="col-lg-6">
-            <label>Products selected</label>
+          <div class="col-lg-8">
+            <h5>Products</h5>
             <span class="btn btn-outline-dark" (click)="current.products = []">Clear selection</span>
-            <div class="col-lg-12 row">
+            <div class="col-lg-12 row selected-product-header">
+                <div class="col-lg-1"></div>
                 <div class="col-lg-3">Name</div>
                 <div class="col-lg-3">Unit price</div>
-                <div class="col-lg-3">Quantity</div>
+                <div class="col-lg-2">Quantity</div>
                 <div class="col-lg-3">Unit of measure</div>
             </div>
-            <div  class="selected-product" *ngFor="let p of current.products;let i = index">
-              <input class="col-lg-3" [(ngModel)]="p.name">
-              <input class="col-lg-3" [(ngModel)]="p.unitPrice">
-              <input class="col-lg-3" [(ngModel)]="p.quantity">
-              <input class="col-lg-3" [(ngModel)]="p.unitOfMeasure">
+            <div  class="col-lg-12 row selected-product-content" *ngFor="let p of current.products;let i = index">
+              <div class="col-lg-1"><span click="remove">-</span></div>
+              <div class="col-lg-3"><input [(ngModel)]="p.name"></div>
+              <div class="col-lg-3"><input [(ngModel)]="p.unitPrice"></div>
+              <div class="col-lg-2"><input [(ngModel)]="p.quantity"></div>
+              <div class="col-lg-3"><input [(ngModel)]="p.unitOfMeasure"></div>
               
               <!--<button (click)="removeProduct(i)">-</button>-->
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-4">
             <app-product (productSelected)="productSelected($event)" [selectOnly]="true"></app-product>
           </div>
         </div>
