--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -215,7 +215,7 @@
         <app-item-list [invoice]="current" *ngIf="current && listOpened == 'items'"></app-item-list>
 
         <div class="col-lg-12 row" *ngIf="current && listOpened == 'products'">
-          <div class="col-lg-8">
+          <div class="col-lg-7">
             <h5>Products</h5>
             <span class="btn btn-outline-dark" (click)="current.products = []">Clear selection</span>
             <div class="col-lg-12 row selected-product-header">
@@ -235,7 +235,7 @@
               <!--<button (click)="removeProduct(i)">-</button>-->
             </div>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-5" style="background-color:#fffbdf">
             <app-product (productSelected)="productSelected($event)" [selectOnly]="true"></app-product>
           </div>
         </div>
