--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -49,16 +49,16 @@
 
   <div class="col-lg-12 table-product-selection">
     <div class="col-lg-12 row header">
-      <div class="col-lg-3">Type</div>
-      <div class="col-lg-3">Name</div>
-      <div class="col-lg-3">Unit of Measure</div>
-      <div class="col-lg-3">Unit price</div>
+      <div class="col-lg-2">Type</div>
+      <div class="col-lg-6">Name</div>
+      <div class="col-lg-2">Unit of Measure</div>
+      <div class="col-lg-2">Unit price</div>
     </div>
     <div class="col-lg-12 row content" *ngFor="let p of filteredProduct" (click)="select(p)">
-      <div class="col-lg-3">{{p.type}}</div>
-      <div class="col-lg-3">{{p.name}}</div>
-      <div class="col-lg-3">{{p.unitOfMeasure}}</div>
-      <div class="col-lg-3">{{p.unitPrice}}</div>
+      <div class="col-lg-2">{{p.type}}</div>
+      <div class="col-lg-6">{{p.name}}</div>
+      <div class="col-lg-2">{{p.unitOfMeasure}}</div>
+      <div class="col-lg-2">{{p.unitPrice}}€</div>
     </div>
   </div>
 </div>
