--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="col-lg-1">
     <label>Total:
-      <select [(ngModel)]="pageSize" (change)="get()">
+      <select [(ngModel)]="pageSize" (change)="pageNumber=0;get()">
         <option>1</option>
         <option>5</option>
         <option>10</option>
