--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -28,6 +28,7 @@
             </div>
         </div>
         </div>    
+        <app-pagination [restService]="invoiceProfileService" (newData)="refreshGrid($event)"></app-pagination>
   </div>
 </div>
 
