refactoring profile to use restservice interface

--- a/src/app/pagination/pagination.component.css
+++ b/src/app/pagination/pagination.component.css
@@ -7,6 +7,8 @@
     font-weight: 600;
 }
 .pagination {
+    font-size: 12px !important;
+    color: rgb(97, 97, 97) !important;
 }
 div {
     padding: 0 !important;
