--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -7,7 +7,7 @@
     </label>
   </div>
   <div class="col-lg-1">
-    <label>Total:
+    <label>Total:<br/>
       <select [(ngModel)]="pageSize" (change)="pageNumber=0;get()">
         <option>1</option>
         <option>5</option>
