--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -33,12 +33,15 @@
     padding: 0;
     border-radius: 0;
 }
-.new-table-invoice:hover > .status{
-    max-width: 15px !important;
-}
+@media only screen and (max-width: 600px) {
 
-.new-table-invoice.selected > .status{
-    max-width: 15px !important;
+    .new-table-invoice:hover > .status{
+        max-width: 15px !important;
+    }
+
+    .new-table-invoice.selected > .status{
+        max-width: 15px !important;
+    }
 }
 .new-table-invoice.selected.invoice-close{
     background-color: var(--invoice-close-color-bck);
